deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-crud-deployment
  labels:
    name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: py-app
  template:
    metadata:
      labels:
        app: py-app
    spec:
      containers:
      - name: app-crud
        image: franticjeremi/app-crud:v3
        ports:
          - name: web
            containerPort: 8000
