service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-crud-service
  labels:
    name: myapp
spec:
  selector:
    app: py-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: web
  type: NodePort
